<resources>
    <string name="app_name">BloodAid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="phone">Phone</string>
    <string name="sign_out">Sign Out</string>
    <string name="blood_type">Blood Type</string>
    <string name="contact">Contact</string>

    <string name="gender">BloodAid</string>
    <!-- Cinsiyet seçenekleri -->
    <string-array name="gender_options">
        <item>Choose</item>
        <item>Man</item>
        <item>Woman</item>
    </string-array>

    <string name="BloodType">BloodAid</string>
    <!-- Cinsiyet seçenekleri -->
    <string-array name="blood_type_options">
        <item>Choose</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>0+</item>
        <item>0-</item>
    </string-array>

    <string name="type">BloodAid</string>
    <!-- Cinsiyet seçenekleri -->
    <string-array name="type_options">
        <item>Choose</item>
        <item>Need For Blood</item>
        <item>Donor</item>
    </string-array>

    <string name="tab_blood_recipient">Blood Recipient</string>
    <string name="tab_donor">Donor</string>
    <string-array name="tab_titles">
        <item>@string/tab_blood_recipient</item>
        <item>@string/tab_donor</item>
    </string-array>


</resources>

