<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.RegisterFragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2F2F5">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="350dp"
        android:layout_height="170dp"
        android:src="@drawable/logo"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@id/cv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_name"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="4dp"
        app:contentPadding="2dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_blood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/user"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="2dp"
            app:startIconTint="@color/ch1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="Full Name"
                android:paddingStart="40dp"
                android:textColor="@color/black"
                android:textColorHint="@color/ch1" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_blood"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:minWidth="48dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="4dp"
            app:contentPadding="2dp"
            app:layout_constraintBottom_toTopOf="@+id/cv_email"
            app:layout_constraintEnd_toStartOf="@id/cv_age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_name">

            <Spinner
                android:id="@+id/spinnerBloodGroups"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minHeight="40dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_age"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:minWidth="48dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="4dp"
            app:contentPadding="2dp"
            app:layout_constraintBottom_toTopOf="@id/cv_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_blood"
            app:layout_constraintTop_toBottomOf="@id/cv_name">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_age"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Age"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/calendar"
                app:startIconTint="@color/ch1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="42dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/ch1" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="4dp"
            app:contentPadding="2dp"
            app:layout_constraintBottom_toTopOf="@+id/cv_phone"
            app:layout_constraintEnd_toStartOf="@id/cv_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_blood">

            <Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minHeight="40dp"/>

        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="4dp"
        app:contentPadding="2dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cv_gender"
        app:layout_constraintTop_toBottomOf="@+id/cv_blood">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/email"
            app:startIconTint="@color/ch1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:paddingStart="40dp"
                android:textColor="@color/black"
                android:textColorHint="@color/ch1" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_phone"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="4dp"
        app:contentPadding="2dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_email">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/phonecall"
            app:startIconTint="@color/ch1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:paddingStart="40dp"
                android:textColor="@color/black"
                android:textColorHint="@color/ch1" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_password"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="4dp"
            app:contentPadding="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_phone"
            app:layout_constraintBottom_toTopOf="@id/cv_address">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/ch1"
                app:startIconDrawable="@drawable/padlock"
                app:startIconTint="@color/ch1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingStart="40dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <!-- Adres Bilgisi için Yeni CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_address"
            android:layout_width="360dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="4dp"
            app:contentPadding="2dp"
            app:layout_constraintBottom_toTopOf="@id/btn_contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_password">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Address"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/location"
                app:startIconTint="@color/ch1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:paddingStart="40dp"
                    android:singleLine="false"
                    android:textColor="@color/black"
                    android:textColorHint="@color/ch1" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <!-- Kayıt Ol Button'unun Constraint'leri güncellendi -->
        <Button
            android:id="@+id/btn_contact"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ch1"
            android:text="Sign Up"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:textAllCaps="false"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_address" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>